ql/parse/parser.out
Created by PLY version 3.10 (http://www.dabeaz.com/ply)

Unused terminals:

    ROUTING

Grammar

Rule 0     S' -> EXECUTE_STATEMENT
Rule 1     EXECUTE_STATEMENT -> STATEMENT
Rule 2     STATEMENT -> EXPLAIN STATEMENT
Rule 3     STATEMENT -> TOK_CREATE_TABLE
Rule 4     STATEMENT -> TOK_INSERT_INTO
Rule 5     STATEMENT -> TOK_QUERY
Rule 6     STATEMENT -> TOK_BULK_INTO
Rule 7     STATEMENT -> TOK_UPDATE
Rule 8     STATEMENT -> TOK_UPSERT_INTO
Rule 9     STATEMENT -> TOK_DELETE
Rule 10    STATEMENT -> TOK_SHOW_TABLES
Rule 11    STATEMENT -> TOK_DESC_TABLE
Rule 12    STATEMENT -> TOK_DROP_TABLE
Rule 13    TOK_OPTIONS_OBJECT -> ( KV_ELEMENTS_EXPR )
Rule 14    TOK_DICT_OBJECT -> { KV_ELEMENTS_EXPR }
Rule 15    TOK_LIST_OBJECT -> [ VALUES_EXPR ]
Rule 16    TOK_LIST_OBJECT -> [ ]
Rule 17    TOK_TUPLE_OBJECT -> ( VALUES_EXPR )
Rule 18    TOK_TUPLE_OBJECT -> ( )
Rule 19    KV_ELEMENTS_EXPR -> TOK_KEY_VALUE
Rule 20    KV_ELEMENTS_EXPR -> TOK_KEY_VALUE COMMA TOK_KEY_VALUE
Rule 21    KV_ELEMENTS_EXPR -> TOK_KEY_VALUE COMMA KV_ELEMENTS_EXPR
Rule 22    VALUES_EXPR -> VALUE_EXPR
Rule 23    VALUES_EXPR -> VALUE_EXPR COMMA VALUE_EXPR
Rule 24    VALUES_EXPR -> VALUE_EXPR COMMA VALUES_EXPR
Rule 25    TOK_KEY_VALUE -> TOK_EXPRESSION
Rule 26    LEFT_RESERVED_VALUES_EXPR -> FROM
Rule 27    LEFT_RESERVED_VALUES_EXPR -> TO
Rule 28    LEFT_VALUE_EXPR -> VALUE_EXPR
Rule 29    LEFT_VALUE_EXPR -> TOK_FUNCTION_EXPR
Rule 30    LEFT_VALUE_EXPR -> LEFT_RESERVED_VALUES_EXPR
Rule 31    LEFT_VALUES_EXPR -> LEFT_VALUE_EXPR
Rule 32    LEFT_VALUES_EXPR -> LEFT_VALUE_EXPR COMMA LEFT_VALUE_EXPR
Rule 33    LEFT_VALUES_EXPR -> LEFT_VALUE_EXPR COMMA LEFT_VALUES_EXPR
Rule 34    RIGHT_VALUE_EXPR -> VALUE_EXPR
Rule 35    RIGHT_VALUES_EXPR -> VALUE_EXPR
Rule 36    RIGHT_VALUES_EXPR -> RIGHT_VALUE_EXPR COMMA RIGHT_VALUE_EXPR
Rule 37    RIGHT_VALUES_EXPR -> RIGHT_VALUE_EXPR COMMA RIGHT_VALUES_EXPR
Rule 38    VALUE_EXPR -> TOK_DOT
Rule 39    VALUE_EXPR -> TOK_VALUE
Rule 40    VALUE_EXPR -> TOK_DICT_OBJECT
Rule 41    VALUE_EXPR -> TOK_LIST_OBJECT
Rule 42    TOK_DOT -> TOK_VALUE . TOK_VALUE
Rule 43    TOK_DOT -> TOK_VALUE . TOK_DOT
Rule 44    TOK_VALUE -> DQUOTE_STRING
Rule 45    TOK_VALUE -> WORD
Rule 46    TOK_VALUE -> QUOTE_STRING
Rule 47    TOK_VALUE -> NUMBER
Rule 48    TOK_VALUE -> *
Rule 49    TOK_VALUE -> WORD *
Rule 50    EXPRESSION_EXPR -> NOT EXPRESSION_EXPR
Rule 51    EXPRESSION_EXPR -> ( EXPRESSION_EXPR )
Rule 52    EXPRESSION_EXPR -> EXPRESSION_EXPR OR EXPRESSION_EXPR
Rule 53    EXPRESSION_EXPR -> EXPRESSION_EXPR AND EXPRESSION_EXPR
Rule 54    EXPRESSION_EXPR -> TOK_EXPRESSION
Rule 55    EXPRESSION_EXPR -> TOK_FUNCTION_EXPR
Rule 56    EXPRESSION_EXPR -> TOK_IN_EXPR
Rule 57    TOK_EXPRESSION_LEFT -> LEFT_VALUES_EXPR
Rule 58    TOK_EXPRESSION_RIGHT -> RIGHT_VALUE_EXPR
Rule 59    TOK_EXPRESSION -> TOK_EXPRESSION_LEFT COMPARE_TYPE_EXPR TOK_EXPRESSION_RIGHT
Rule 60    COMPARE_TYPE_EXPR -> COMPARE_TYPE
Rule 61    COMPARE_TYPE_EXPR -> LIKE
Rule 62    TOK_FUNCTION_EXPR -> TOK_BEWTEEN
Rule 63    TOK_FUNCTION_EXPR -> TOK_FUNCTION
Rule 64    TOK_FUNCTION_EXPR -> TOK_ISNULL
Rule 65    TOK_FUNCTION -> VALUE_EXPR TOK_TUPLE_OBJECT
Rule 66    TOK_BEWTEEN -> VALUE_EXPR BETWEEN RIGHT_VALUE_EXPR AND RIGHT_VALUE_EXPR
Rule 67    TOK_ISNULL -> VALUE_EXPR IS NULL
Rule 68    TOK_ISNULL -> VALUE_EXPR IS NOT NULL
Rule 69    TOK_IN_EXPR -> TOK_EXPRESSION_LEFT IN TOK_TUPLE_OBJECT
Rule 70    TOK_CREATE_TABLE -> TOK_CREATE_TABLE WITH OPTION TOK_TABLE_OPTIONS
Rule 71    TOK_CREATE_TABLE -> TOK_CREATE_TABLE WITH META TOK_TABLE_METAS
Rule 72    TOK_CREATE_TABLE -> CREATE TABLE TOK_TABLE_NAME TOK_TABLE_COLS
Rule 73    TOK_META_OPTIONS -> TOK_OPTIONS_OBJECT
Rule 74    TOK_META_DEF -> WORD TOK_META_OPTIONS
Rule 75    TOK_METAS_DEF -> TOK_META_DEF
Rule 76    TOK_METAS_DEF -> TOK_META_DEF COMMA TOK_META_DEF
Rule 77    TOK_METAS_DEF -> TOK_META_DEF COMMA TOK_METAS_DEF
Rule 78    TOK_TABLE_METAS -> ( )
Rule 79    TOK_TABLE_METAS -> ( TOK_METAS_DEF )
Rule 80    TOK_TABLE_OPTIONS -> TOK_OPTIONS_OBJECT
Rule 81    TOK_TABLE_NAME -> VALUE_EXPR
Rule 82    TOK_TABLE_COLS -> ( )
Rule 83    TOK_TABLE_COLS -> ( TOK_COLUMNS_DEFINE )
Rule 84    TOK_COLUMNS_DEFINE -> TOK_COLUMN_DEFINE
Rule 85    TOK_COLUMNS_DEFINE -> TOK_COLUMN_DEFINE COMMA TOK_COLUMN_DEFINE
Rule 86    TOK_COLUMNS_DEFINE -> TOK_COLUMN_DEFINE COMMA TOK_COLUMNS_DEFINE
Rule 87    COLUMN_TYPE -> WORD
Rule 88    TOK_COLUMN_DEFINE -> TOK_COLUMN_DEFINE AS TOK_TABLE_COLS
Rule 89    TOK_COLUMN_OPTIONS -> TOK_OPTIONS_OBJECT
Rule 90    TOK_COLUMN_DEFINE -> WORD COLUMN_TYPE
Rule 91    TOK_COLUMN_DEFINE -> WORD COLUMN_TYPE TOK_COLUMN_OPTIONS
Rule 92    TOK_QUERY -> TOK_QUERY ORDER BY TOK_ORDERBY
Rule 93    TOK_QUERY -> TOK_QUERY WHERE TOK_WHERE
Rule 94    TOK_QUERY -> TOK_QUERY LIMIT TOK_LIMIT
Rule 95    TOK_QUERY -> SELECT TOK_SELECT FROM TOK_FROM
Rule 96    TOK_FROM -> TOK_TABLE_NAME
Rule 97    TOK_FROM -> TOK_TABLE_NAME @ TOK_VALUE
Rule 98    TOK_WHERE -> EXPRESSION_EXPR
Rule 99    TOK_SELECT -> TOK_SELEXPRS
Rule 100   TOK_SELEXPR -> LEFT_VALUE_EXPR
Rule 101   TOK_SELEXPR -> LEFT_VALUE_EXPR AS VALUE_EXPR
Rule 102   TOK_SELEXPRS -> TOK_SELEXPR
Rule 103   TOK_SELEXPRS -> TOK_SELEXPR COMMA TOK_SELEXPR
Rule 104   TOK_SELEXPRS -> TOK_SELEXPR COMMA TOK_SELEXPRS
Rule 105   TOK_LIMIT -> LIMITS_EXPR
Rule 106   LIMIT_EXPR -> NUMBER
Rule 107   LIMITS_EXPR -> LIMIT_EXPR
Rule 108   LIMITS_EXPR -> LIMIT_EXPR COMMA LIMIT_EXPR
Rule 109   TOK_ORDERBY -> TOK_SORTS
Rule 110   TOK_SORTS -> TOK_SORT
Rule 111   TOK_SORTS -> TOK_SORT COMMA TOK_SORT
Rule 112   TOK_SORTS -> TOK_SORT COMMA TOK_SORTS
Rule 113   SORT_MODE -> ASC
Rule 114   SORT_MODE -> DESC
Rule 115   TOK_SORT -> LEFT_VALUE_EXPR
Rule 116   TOK_SORT -> LEFT_VALUE_EXPR SORT_MODE
Rule 117   TOK_QUERY -> TOK_QUERY GROUP BY TOK_GROUPBY
Rule 118   TOK_GROUPBY -> LEFT_VALUES_EXPR
Rule 119   TOK_INSERT_INTO -> INSERT INTO TOK_TABLE_NAME TOK_INSERT_COLUMNS VALUES TOK_VALUE_ROW
Rule 120   TOK_INSERT_COLUMNS -> TOK_TUPLE_OBJECT
Rule 121   TOK_VALUE_ROW -> ( RIGHT_VALUES_EXPR )
Rule 122   INSERT_ROWS_EXPR -> TOK_VALUE_ROW
Rule 123   INSERT_ROWS_EXPR -> TOK_VALUE_ROW COMMA TOK_VALUE_ROW
Rule 124   INSERT_ROWS_EXPR -> TOK_VALUE_ROW COMMA INSERT_ROWS_EXPR
Rule 125   TOK_BULK_INTO -> BULK INTO TOK_TABLE_NAME TOK_INSERT_COLUMNS VALUES INSERT_ROWS_EXPR
Rule 126   TOK_UPDATE -> UPDATE TOK_TABLE_NAME SET TOK_SET_COLUMNS_CLAUSE WHERE TOK_WHERE
Rule 127   TOK_SET_COLUMNS_CLAUSE -> KV_ELEMENTS_EXPR
Rule 128   TOK_UPSERT_INTO -> UPSERT TOK_TABLE_NAME SET TOK_SET_COLUMNS_CLAUSE WHERE TOK_WHERE
Rule 129   TOK_DELETE -> DELETE FROM TOK_TABLE_NAME WHERE TOK_WHERE
Rule 130   TOK_SHOW_TABLES -> SHOW TABLES
Rule 131   TOK_DESC_TABLE -> DESC TOK_TABLE_NAME
Rule 132   TOK_DROP_TABLE -> DROP TABLE TOK_TABLE_NAME

Terminals, with rules where they appear

(                    : 13 17 18 51 78 79 82 83 121
)                    : 13 17 18 51 78 79 82 83 121
*                    : 48 49
.                    : 42 43
@                    : 97
AND                  : 53 66
AS                   : 88 101
ASC                  : 113
BETWEEN              : 66
BULK                 : 125
BY                   : 92 117
COMMA                : 20 21 23 24 32 33 36 37 76 77 85 86 103 104 108 111 112 123 124
COMPARE_TYPE         : 60
CREATE               : 72
DELETE               : 129
DESC                 : 114 131
DQUOTE_STRING        : 44
DROP                 : 132
EXPLAIN              : 2
FROM                 : 26 95 129
GROUP                : 117
IN                   : 69
INSERT               : 119
INTO                 : 119 125
IS                   : 67 68
LIKE                 : 61
LIMIT                : 94
META                 : 71
NOT                  : 50 68
NULL                 : 67 68
NUMBER               : 47 106
OPTION               : 70
OR                   : 52
ORDER                : 92
QUOTE_STRING         : 46
ROUTING              : 
SELECT               : 95
SET                  : 126 128
SHOW                 : 130
TABLE                : 72 132
TABLES               : 130
TO                   : 27
UPDATE               : 126
UPSERT               : 128
VALUES               : 119 125
WHERE                : 93 126 128 129
WITH                 : 70 71
WORD                 : 45 49 74 87 90 91
[                    : 15 16
]                    : 15 16
error                : 
{                    : 14
}                    : 14

Nonterminals, with rules where they appear

COLUMN_TYPE          : 90 91
COMPARE_TYPE_EXPR    : 59
EXECUTE_STATEMENT    : 0
EXPRESSION_EXPR      : 50 51 52 52 53 53 98
INSERT_ROWS_EXPR     : 124 125
KV_ELEMENTS_EXPR     : 13 14 21 127
LEFT_RESERVED_VALUES_EXPR : 30
LEFT_VALUES_EXPR     : 33 57 118
LEFT_VALUE_EXPR      : 31 32 32 33 100 101 115 116
LIMITS_EXPR          : 105
LIMIT_EXPR           : 107 108 108
RIGHT_VALUES_EXPR    : 37 121
RIGHT_VALUE_EXPR     : 36 36 37 58 66 66
SORT_MODE            : 116
STATEMENT            : 1 2
TOK_BEWTEEN          : 62
TOK_BULK_INTO        : 6
TOK_COLUMNS_DEFINE   : 83 86
TOK_COLUMN_DEFINE    : 84 85 85 86 88
TOK_COLUMN_OPTIONS   : 91
TOK_CREATE_TABLE     : 3 70 71
TOK_DELETE           : 9
TOK_DESC_TABLE       : 11
TOK_DICT_OBJECT      : 40
TOK_DOT              : 38 43
TOK_DROP_TABLE       : 12
TOK_EXPRESSION       : 25 54
TOK_EXPRESSION_LEFT  : 59 69
TOK_EXPRESSION_RIGHT : 59
TOK_FROM             : 95
TOK_FUNCTION         : 63
TOK_FUNCTION_EXPR    : 29 55
TOK_GROUPBY          : 117
TOK_INSERT_COLUMNS   : 119 125
TOK_INSERT_INTO      : 4
TOK_IN_EXPR          : 56
TOK_ISNULL           : 64
TOK_KEY_VALUE        : 19 20 20 21
TOK_LIMIT            : 94
TOK_LIST_OBJECT      : 41
TOK_METAS_DEF        : 77 79
TOK_META_DEF         : 75 76 76 77
TOK_META_OPTIONS     : 74
TOK_OPTIONS_OBJECT   : 73 80 89
TOK_ORDERBY          : 92
TOK_QUERY            : 5 92 93 94 117
TOK_SELECT           : 95
TOK_SELEXPR          : 102 103 103 104
TOK_SELEXPRS         : 99 104
TOK_SET_COLUMNS_CLAUSE : 126 128
TOK_SHOW_TABLES      : 10
TOK_SORT             : 110 111 111 112
TOK_SORTS            : 109 112
TOK_TABLE_COLS       : 72 88
TOK_TABLE_METAS      : 71
TOK_TABLE_NAME       : 72 96 97 119 125 126 128 129 131 132
TOK_TABLE_OPTIONS    : 70
TOK_TUPLE_OBJECT     : 65 69 120
TOK_UPDATE           : 7
TOK_UPSERT_INTO      : 8
TOK_VALUE            : 39 42 42 43 97
TOK_VALUE_ROW        : 119 122 123 123 124
TOK_WHERE            : 93 126 128 129
VALUES_EXPR          : 15 17 24
VALUE_EXPR           : 22 23 23 24 28 34 35 65 66 67 68 81 101

Parsing method: LALR

state 0

    (0) S' -> . EXECUTE_STATEMENT
    (1) EXECUTE_STATEMENT -> . STATEMENT
    (2) STATEMENT -> . EXPLAIN STATEMENT
    (3) STATEMENT -> . TOK_CREATE_TABLE
    (4) STATEMENT -> . TOK_INSERT_INTO
    (5) STATEMENT -> . TOK_QUERY
    (6) STATEMENT -> . TOK_BULK_INTO
    (7) STATEMENT -> . TOK_UPDATE
    (8) STATEMENT -> . TOK_UPSERT_INTO
    (9) STATEMENT -> . TOK_DELETE
    (10) STATEMENT -> . TOK_SHOW_TABLES
    (11) STATEMENT -> . TOK_DESC_TABLE
    (12) STATEMENT -> . TOK_DROP_TABLE
    (70) TOK_CREATE_TABLE -> . TOK_CREATE_TABLE WITH OPTION TOK_TABLE_OPTIONS
    (71) TOK_CREATE_TABLE -> . TOK_CREATE_TABLE WITH META TOK_TABLE_METAS
    (72) TOK_CREATE_TABLE -> . CREATE TABLE TOK_TABLE_NAME TOK_TABLE_COLS
    (119) TOK_INSERT_INTO -> . INSERT INTO TOK_TABLE_NAME TOK_INSERT_COLUMNS VALUES TOK_VALUE_ROW
    (92) TOK_QUERY -> . TOK_QUERY ORDER BY TOK_ORDERBY
    (93) TOK_QUERY -> . TOK_QUERY WHERE TOK_WHERE
    (94) TOK_QUERY -> . TOK_QUERY LIMIT TOK_LIMIT
    (95) TOK_QUERY -> . SELECT TOK_SELECT FROM TOK_FROM
    (117) TOK_QUERY -> . TOK_QUERY GROUP BY TOK_GROUPBY
    (125) TOK_BULK_INTO -> . BULK INTO TOK_TABLE_NAME TOK_INSERT_COLUMNS VALUES INSERT_ROWS_EXPR
    (126) TOK_UPDATE -> . UPDATE TOK_TABLE_NAME SET TOK_SET_COLUMNS_CLAUSE WHERE TOK_WHERE
    (128) TOK_UPSERT_INTO -> . UPSERT TOK_TABLE_NAME SET TOK_SET_COLUMNS_CLAUSE WHERE TOK_WHERE
    (129) TOK_DELETE -> . DELETE FROM TOK_TABLE_NAME WHERE TOK_WHERE
    (130) TOK_SHOW_TABLES -> . SHOW TABLES
    (131) TOK_DESC_TABLE -> . DESC TOK_TABLE_NAME
    (132) TOK_DROP_TABLE -> . DROP TABLE TOK_TABLE_NAME

    EXPLAIN         shift and go to state 3
    CREATE          shift and go to state 14
    INSERT          shift and go to state 15
    SELECT          shift and go to state 16
    BULK            shift and go to state 17
    UPDATE          shift and go to state 18
    UPSERT          shift and go to state 19
    DELETE          shift and go to state 20
    SHOW            shift and go to state 21
    DESC            shift and go to state 22
    DROP            shift and go to state 23

    EXECUTE_STATEMENT              shift and go to state 1
    STATEMENT                      shift and go to state 2
    TOK_CREATE_TABLE               shift and go to state 4
    TOK_INSERT_INTO                shift and go to state 5
    TOK_QUERY                      shift and go to state 6
    TOK_BULK_INTO                  shift and go to state 7
    TOK_UPDATE                     shift and go to state 8
    TOK_UPSERT_INTO                shift and go to state 9
    TOK_DELETE                     shift and go to state 10
    TOK_SHOW_TABLES                shift and go to state 11
    TOK_DESC_TABLE                 shift and go to state 12
    TOK_DROP_TABLE                 shift and go to state 13

state 1

    (0) S' -> EXECUTE_STATEMENT .



state 2

    (1) EXECUTE_STATEMENT -> STATEMENT .

    $end            reduce using rule 1 (EXECUTE_STATEMENT -> STATEMENT .)


state 3

    (2) STATEMENT -> EXPLAIN . STATEMENT
    (2) STATEMENT -> . EXPLAIN STATEMENT
    (3) STATEMENT -> . TOK_CREATE_TABLE
    (4) STATEMENT -> . TOK_INSERT_INTO
    (5) STATEMENT -> . TOK_QUERY
    (6) STATEMENT -> . TOK_BULK_INTO
    (7) STATEMENT -> . TOK_UPDATE
    (8) STATEMENT -> . TOK_UPSERT_INTO
    (9) STATEMENT -> . TOK_DELETE
    (10) STATEMENT -> . TOK_SHOW_TABLES
    (11) STATEMENT -> . TOK_DESC_TABLE
    (12) STATEMENT -> . TOK_DROP_TABLE
    (70) TOK_CREATE_TABLE -> . TOK_CREATE_TABLE WITH OPTION TOK_TABLE_OPTIONS
    (71) TOK_CREATE_TABLE -> . TOK_CREATE_TABLE WITH META TOK_TABLE_METAS
    (72) TOK_CREATE_TABLE -> . CREATE TABLE TOK_TABLE_NAME TOK_TABLE_COLS
    (119) TOK_INSERT_INTO -> . INSERT INTO TOK_TABLE_NAME TOK_INSERT_COLUMNS VALUES TOK_VALUE_ROW
    (92) TOK_QUERY -> . TOK_QUERY ORDER BY TOK_ORDERBY
    (93) TOK_QUERY -> . TOK_QUERY WHERE TOK_WHERE
    (94) TOK_QUERY -> . TOK_QUERY LIMIT TOK_LIMIT
    (95) TOK_QUERY -> . SELECT TOK_SELECT FROM TOK_FROM
    (117) TOK_QUERY -> . TOK_QUERY GROUP BY TOK_GROUPBY
    (125) TOK_BULK_INTO -> . BULK INTO TOK_TABLE_NAME TOK_INSERT_COLUMNS VALUES INSERT_ROWS_EXPR
    (126) TOK_UPDATE -> . UPDATE TOK_TABLE_NAME SET TOK_SET_COLUMNS_CLAUSE WHERE TOK_WHERE
    (128) TOK_UPSERT_INTO -> . UPSERT TOK_TABLE_NAME SET TOK_SET_COLUMNS_CLAUSE WHERE TOK_WHERE
    (129) TOK_DELETE -> . DELETE FROM TOK_TABLE_NAME WHERE TOK_WHERE
    (130) TOK_SHOW_TABLES -> . SHOW TABLES
    (131) TOK_DESC_TABLE -> . DESC TOK_TABLE_NAME
    (132) TOK_DROP_TABLE -> . DROP TABLE TOK_TABLE_NAME

    EXPLAIN         shift and go to state 3
    CREATE          shift and go to state 14
    INSERT          shift and go to state 15
    SELECT          shift and go to state 16
    BULK            shift and go to state 17
    UPDATE          shift and go to state 18
    UPSERT          shift and go to state 19
    DELETE          shift and go to state 20
    SHOW            shift and go to state 21
    DESC            shift and go to state 22
    DROP            shift and go to state 23

    STATEMENT                      shift and go to state 24
    TOK_CREATE_TABLE               shift and go to state 4
    TOK_INSERT_INTO                shift and go to state 5
    TOK_QUERY                      shift and go to state 6
    TOK_BULK_INTO                  shift and go to state 7
    TOK_UPDATE                     shift and go to state 8
    TOK_UPSERT_INTO                shift and go to state 9
    TOK_DELETE                     shift and go to state 10
    TOK_SHOW_TABLES                shift and go to state 11
    TOK_DESC_TABLE                 shift and go to state 12
    TOK_DROP_TABLE                 shift and go to state 13

state 4

    (3) STATEMENT -> TOK_CREATE_TABLE .
    (70) TOK_CREATE_TABLE -> TOK_CREATE_TABLE . WITH OPTION TOK_TABLE_OPTIONS
    (71) TOK_CREATE_TABLE -> TOK_CREATE_TABLE . WITH META TOK_TABLE_METAS

    $end            reduce using rule 3 (STATEMENT -> TOK_CREATE_TABLE .)
    WITH            shift and go to state 25


state 5

    (4) STATEMENT -> TOK_INSERT_INTO .

    $end            reduce using rule 4 (STATEMENT -> TOK_INSERT_INTO .)


state 6

    (5) STATEMENT -> TOK_QUERY .
    (92) TOK_QUERY -> TOK_QUERY . ORDER BY TOK_ORDERBY
    (93) TOK_QUERY -> TOK_QUERY . WHERE TOK_WHERE
    (94) TOK_QUERY -> TOK_QUERY . LIMIT TOK_LIMIT
    (117) TOK_QUERY -> TOK_QUERY . GROUP BY TOK_GROUPBY

    $end            reduce using rule 5 (STATEMENT -> TOK_QUERY .)
    ORDER           shift and go to state 26
    WHERE           shift and go to state 27
    LIMIT           shift and go to state 28
    GROUP           shift and go to state 29


state 7

    (6) STATEMENT -> TOK_BULK_INTO .

    $end            reduce using rule 6 (STATEMENT -> TOK_BULK_INTO .)


state 8

    (7) STATEMENT -> TOK_UPDATE .

    $end            reduce using rule 7 (STATEMENT -> TOK_UPDATE .)


state 9

    (8) STATEMENT -> TOK_UPSERT_INTO .

    $end            reduce using rule 8 (STATEMENT -> TOK_UPSERT_INTO .)


state 10

    (9) STATEMENT -> TOK_DELETE .

    $end            reduce using rule 9 (STATEMENT -> TOK_DELETE .)


state 11

    (10) STATEMENT -> TOK_SHOW_TABLES .

    $end            reduce using rule 10 (STATEMENT -> TOK_SHOW_TABLES .)


state 12

    (11) STATEMENT -> TOK_DESC_TABLE .

    $end            reduce using rule 11 (STATEMENT -> TOK_DESC_TABLE .)


state 13

    (12) STATEMENT -> TOK_DROP_TABLE .

    $end            reduce using rule 12 (STATEMENT -> TOK_DROP_TABLE .)


state 14

    (72) TOK_CREATE_TABLE -> CREATE . TABLE TOK_TABLE_NAME TOK_TABLE_COLS

    TABLE           shift and go to state 30


state 15

    (119) TOK_INSERT_INTO -> INSERT . INTO TOK_TABLE_NAME TOK_INSERT_COLUMNS VALUES TOK_VALUE_ROW

    INTO            shift and go to state 31


state 16

    (95) TOK_QUERY -> SELECT . TOK_SELECT FROM TOK_FROM
    (99) TOK_SELECT -> . TOK_SELEXPRS
    (102) TOK_SELEXPRS -> . TOK_SELEXPR
    (103) TOK_SELEXPRS -> . TOK_SELEXPR COMMA TOK_SELEXPR
    (104) TOK_SELEXPRS -> . TOK_SELEXPR COMMA TOK_SELEXPRS
    (100) TOK_SELEXPR -> . LEFT_VALUE_EXPR
    (101) TOK_SELEXPR -> . LEFT_VALUE_EXPR AS VALUE_EXPR
    (28) LEFT_VALUE_EXPR -> . VALUE_EXPR
    (29) LEFT_VALUE_EXPR -> . TOK_FUNCTION_EXPR
    (30) LEFT_VALUE_EXPR -> . LEFT_RESERVED_VALUES_EXPR
    (38) VALUE_EXPR -> . TOK_DOT
    (39) VALUE_EXPR -> . TOK_VALUE
    (40) VALUE_EXPR -> . TOK_DICT_OBJECT
    (41) VALUE_EXPR -> . TOK_LIST_OBJECT
    (62) TOK_FUNCTION_EXPR -> . TOK_BEWTEEN
    (63) TOK_FUNCTION_EXPR -> . TOK_FUNCTION
    (64) TOK_FUNCTION_EXPR -> . TOK_ISNULL
    (26) LEFT_RESERVED_VALUES_EXPR -> . FROM
    (27) LEFT_RESERVED_VALUES_EXPR -> . TO
    (42) TOK_DOT -> . TOK_VALUE . TOK_VALUE
    (43) TOK_DOT -> . TOK_VALUE . TOK_DOT
    (44) TOK_VALUE -> . DQUOTE_STRING
    (45) TOK_VALUE -> . WORD
    (46) TOK_VALUE -> . QUOTE_STRING
    (47) TOK_VALUE -> . NUMBER
    (48) TOK_VALUE -> . *
    (49) TOK_VALUE -> . WORD *
    (14) TOK_DICT_OBJECT -> . { KV_ELEMENTS_EXPR }
    (15) TOK_LIST_OBJECT -> . [ VALUES_EXPR ]
    (16) TOK_LIST_OBJECT -> . [ ]
    (66) TOK_BEWTEEN -> . VALUE_EXPR BETWEEN RIGHT_VALUE_EXPR AND RIGHT_VALUE_EXPR
    (65) TOK_FUNCTION -> . VALUE_EXPR TOK_TUPLE_OBJECT
    (67) TOK_ISNULL -> . VALUE_EXPR IS NULL
    (68) TOK_ISNULL -> . VALUE_EXPR IS NOT NULL

    FROM            shift and go to state 33
    TO              shift and go to state 47
    DQUOTE_STRING   shift and go to state 48
    WORD            shift and go to state 49
    QUOTE_STRING    shift and go to state 50
    NUMBER          shift and go to state 51
    *               shift and go to state 52
    {               shift and go to state 53
    [               shift and go to state 54

    TOK_SELECT                     shift and go to state 32
    TOK_SELEXPRS                   shift and go to state 34
    TOK_SELEXPR                    shift and go to state 35
    LEFT_VALUE_EXPR                shift and go to state 36
    VALUE_EXPR                     shift and go to state 37
    TOK_FUNCTION_EXPR              shift and go to state 38
    LEFT_RESERVED_VALUES_EXPR      shift and go to state 39
    TOK_DOT                        shift and go to state 40
    TOK_VALUE                      shift and go to state 41
    TOK_DICT_OBJECT                shift and go to state 42
    TOK_LIST_OBJECT                shift and go to state 43
    TOK_BEWTEEN                    shift and go to state 44
    TOK_FUNCTION                   shift and go to state 45
    TOK_ISNULL                     shift and go to state 46

state 17

    (125) TOK_BULK_INTO -> BULK . INTO TOK_TABLE_NAME TOK_INSERT_COLUMNS VALUES INSERT_ROWS_EXPR

    INTO            shift and go to state 55


state 18

    (126) TOK_UPDATE -> UPDATE . TOK_TABLE_NAME SET TOK_SET_COLUMNS_CLAUSE WHERE TOK_WHERE
    (81) TOK_TABLE_NAME -> . VALUE_EXPR
    (38) VALUE_EXPR -> . TOK_DOT
    (39) VALUE_EXPR -> . TOK_VALUE
    (40) VALUE_EXPR -> . TOK_DICT_OBJECT
    (41) VALUE_EXPR -> . TOK_LIST_OBJECT
    (42) TOK_DOT -> . TOK_VALUE . TOK_VALUE
    (43) TOK_DOT -> . TOK_VALUE . TOK_DOT
    (44) TOK_VALUE -> . DQUOTE_STRING
    (45) TOK_VALUE -> . WORD
    (46) TOK_VALUE -> . QUOTE_STRING
    (47) TOK_VALUE -> . NUMBER
    (48) TOK_VALUE -> . *
    (49) TOK_VALUE -> . WORD *
    (14) TOK_DICT_OBJECT -> . { KV_ELEMENTS_EXPR }
    (15) TOK_LIST_OBJECT -> . [ VALUES_EXPR ]
    (16) TOK_LIST_OBJECT -> . [ ]

    DQUOTE_STRING   shift and go to state 48
    WORD            shift and go to state 49
    QUOTE_STRING    shift and go to state 50
    NUMBER          shift and go to state 51
    *               shift and go to state 52
    {               shift and go to state 53
    [               shift and go to state 54

    TOK_TABLE_NAME                 shift and go to state 56
    VALUE_EXPR                     shift and go to state 57
    TOK_DOT                        shift and go to state 40
    TOK_VALUE                      shift and go to state 41
    TOK_DICT_OBJECT                shift and go to state 42
    TOK_LIST_OBJECT                shift and go to state 43

state 19

    (128) TOK_UPSERT_INTO -> UPSERT . TOK_TABLE_NAME SET TOK_SET_COLUMNS_CLAUSE WHERE TOK_WHERE
    (81) TOK_TABLE_NAME -> . VALUE_EXPR
    (38) VALUE_EXPR -> . TOK_DOT
    (39) VALUE_EXPR -> . TOK_VALUE
    (40) VALUE_EXPR -> . TOK_DICT_OBJECT
    (41) VALUE_EXPR -> . TOK_LIST_OBJECT
    (42) TOK_DOT -> . TOK_VALUE . TOK_VALUE
    (43) TOK_DOT -> . TOK_VALUE . TOK_DOT
    (44) TOK_VALUE -> . DQUOTE_STRING
    (45) TOK_VALUE -> . WORD
    (46) TOK_VALUE -> . QUOTE_STRING
    (47) TOK_VALUE -> . NUMBER
    (48) TOK_VALUE -> . *
    (49) TOK_VALUE -> . WORD *
    (14) TOK_DICT_OBJECT -> . { KV_ELEMENTS_EXPR }
    (15) TOK_LIST_OBJECT -> . [ VALUES_EXPR ]
    (16) TOK_LIST_OBJECT -> . [ ]

    DQUOTE_STRING   shift and go to state 48
    WORD            shift and go to state 49
    QUOTE_STRING    shift and go to state 50
    NUMBER          shift and go to state 51
    *               shift and go to state 52
    {               shift and go to state 53
    [               shift and go to state 54

    TOK_TABLE_NAME                 shift and go to state 58
    VALUE_EXPR                     shift and go to state 57
    TOK_DOT                        shift and go to state 40
    TOK_VALUE                      shift and go to state 41
    TOK_DICT_OBJECT                shift and go to state 42
    TOK_LIST_OBJECT                shift and go to state 43

state 20

    (129) TOK_DELETE -> DELETE . FROM TOK_TABLE_NAME WHERE TOK_WHERE

    FROM            shift and go to state 59


state 21

    (130) TOK_SHOW_TABLES -> SHOW . TABLES

    TABLES          shift and go to state 60


state 22
